--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
       name: pypi
       url: https://pypi.org/project/dialogue-guardian/
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
 
       - name: Debug workflow trigger
         run: |
@@ -38,23 +38,13 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Get pip cache directory
-        id: pip-cache
-        shell: python
-        run: |
-          import subprocess
-          import os
-          result = subprocess.run(["pip", "cache", "dir"], capture_output=True, text=True)
-          with open(os.environ["GITHUB_OUTPUT"], "a") as fh:
-              fh.write(f"PIP_CACHE_DIR={result.stdout.strip()}\n")
-
-      - name: Cache pip dependencies
+      - name: Cache build dependencies
         uses: actions/cache@v4
         with:
-          path: ${{ steps.pip-cache.outputs.PIP_CACHE_DIR }}
-          key: ${{ runner.os }}-pip-${{ hashFiles('dialogue-guardian/pyproject.toml') }}
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-publish-build-${{ hashFiles('dialogue-guardian/pyproject.toml') }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-publish-build-
 
       - name: Install build dependencies
         run: |
@@ -110,10 +100,11 @@ jobs:
 
   test-install:
     needs: build
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release' || (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v'))
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        # Reduced matrix - only test critical combinations for publish validation
         python-version: ["3.8", "3.12"]
 
     steps:
@@ -122,48 +113,46 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Get pip cache directory
-        id: pip-cache
-        shell: python
-        run: |
-          import subprocess
-          import os
-          result = subprocess.run(["pip", "cache", "dir"], capture_output=True, text=True)
-          with open(os.environ["GITHUB_OUTPUT"], "a") as fh:
-              fh.write(f"PIP_CACHE_DIR={result.stdout.strip()}\n")
-
-      - name: Cache pip dependencies
+      - name: Cache pip for test installation
         uses: actions/cache@v4
         with:
-          path: ${{ steps.pip-cache.outputs.PIP_CACHE_DIR }}
-          key: ${{ runner.os }}-pip-${{ hashFiles('dialogue-guardian/pyproject.toml') }}
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-test-install-${{ matrix.python-version }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-test-install-
 
-      - name: Install FFmpeg (Ubuntu)
-        if: matrix.os == 'ubuntu-latest'
+      # Only install FFmpeg on Ubuntu for basic smoke testing
+      - name: Install FFmpeg
         run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg
 
-      - name: Install FFmpeg (macOS)
-        if: matrix.os == 'macos-latest'
-        run: |
-          brew install ffmpeg
-
-      - name: Install FFmpeg (Windows)
-        if: matrix.os == 'windows-latest'
-        run: |
-          choco install ffmpeg
-
       - name: Test installation from PyPI
         if: github.event_name == 'release'
         run: |
+          # Add delay to allow PyPI propagation
+          sleep 60
           pip install dialogue-guardian
           guardian --help
+          python -c "import guardian; print(f'Guardian version: {guardian.__version__}')"
 
       - name: Test installation from Test PyPI
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
         run: |
+          # Add delay to allow Test PyPI propagation
+          sleep 30
           pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ dialogue-guardian
           guardian --help
+          python -c "import guardian; print(f'Guardian version: {guardian.__version__}')"
+
+  # Post-publish validation
+  validate-release:
+    needs: [build, test-install]
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release'
+    steps:
+      - name: Validate PyPI package
+        run: |
+          pip install dialogue-guardian
+          python -c "import guardian; print(f'Successfully installed Guardian {guardian.__version__} from PyPI')"
+          echo "✅ Package validation successful!"
